# ChangeLog for x11-wm/xpra
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.27 2012/09/05 10:27:15 xmw Exp $

*xpra-0.5.3 (05 Sep 2012)

  05 Sep 2012; Michael Weber <xmw@gentoo.org> +xpra-0.5.3.ebuild,
  xpra-0.6.0.ebuild:
  Upstream dropped 0.6.0 release. Version bump to 0.5.3.

*xpra-0.5.2 (29 Aug 2012)

  29 Aug 2012; Michael Weber <xmw@gentoo.org> +xpra-0.5.2.ebuild,
  -xpra-0.5.0.ebuild, -xpra-0.5.1.ebuild:
  Version bump, drop old

*xpra-0.6.0 (27 Aug 2012)
*xpra-0.5.1 (27 Aug 2012)

  27 Aug 2012; Michael Weber <xmw@gentoo.org> +xpra-0.5.1.ebuild,
  +xpra-0.6.0.ebuild, -xpra-0.4.1.ebuild, metadata.xml:
  Version bump

*xpra-0.5.0 (20 Aug 2012)

  20 Aug 2012; Michael Weber <xmw@gentoo.org> +xpra-0.5.0.ebuild:
  Version bump

  17 Aug 2012; Michael Weber <xmw@gentoo.org> xpra-0.4.2.ebuild:
  Fix whitespaces.

*xpra-0.4.2 (17 Aug 2012)

  17 Aug 2012; Michael Weber <xmw@gentoo.org> +xpra-0.4.2.ebuild:
  Version bump.

  04 Aug 2012; Michael Weber <xmw@gentoo.org> -xpra-0.4.0.ebuild,
  xpra-0.4.1.ebuild:
  Define cython dependency (bug 429624, thanks igel), drop old.

*xpra-0.4.1 (01 Aug 2012)

  01 Aug 2012; Michael Weber <xmw@gentoo.org> +xpra-0.4.1.ebuild,
  -xpra-0.3.3.ebuild:
  Version bump, drop old.

*xpra-0.4.0 (23 Jul 2012)

  23 Jul 2012; Michael Weber <xmw@gentoo.org> +xpra-0.4.0.ebuild,
  -xpra-0.2.0-r1.ebuild, -xpra-0.3.1.ebuild, -xpra-0.3.2.ebuild:
  Version bump

*xpra-0.3.3 (15 Jul 2012)

  15 Jul 2012; Michael Weber <xmw@gentoo.org> +xpra-0.3.3.ebuild:
  Version bump

  11 Jun 2012; Benda Xu <heroxbd@gentoo.org> xpra-0.3.2.ebuild:
  keyword ~x86-linux

  06 Jun 2012; Benda Xu <heroxbd@gentoo.org> xpra-0.3.2.ebuild:
  keyword ~amd64-linux

*xpra-0.3.2 (04 Jun 2012)

  04 Jun 2012; Michael Weber <xmw@gentoo.org> -xpra-0.1.0.1.ebuild,
  +xpra-0.3.2.ebuild:
  Version bump, remove old.

  30 May 2012; Michael Weber <xmw@gentoo.org> xpra-0.3.1.ebuild: