@@ -2,19 +2,21 @@
 Hash: SHA256
 
 DIST xpra-0.4.2.tar.bz2 1129229 SHA256 c0f537855d22897832edbe771fe91eb5327d35db07d4389e906658c677d7aa02 SHA512 58ed09b87a571aba48d1068a4ab3e727eaf5511af5160f490207a1fd5af851a2844be42c15d92e084e56be676668e49eeb243d44bd7d6bccc63e101383813f3a WHIRLPOOL c150052896c97fef5515af429a9c960d4c31522bae094b8fd82257ccf181adecf8d5d395de6a1ad2364d7d8510e3da4441b7ee52de0a2e3f2da79abfb2a9b6e0
-DIST xpra-0.5.2.tar.bz2 451876 SHA256 701fa68b9ff39f92cc2c45675824c969664a589f617368e41a345702c1f0321d SHA512 c4a7def03c4a039aea4272fbc70c78d81c2d4be5f33501613993a5cd65b9572c9ee521085c63ef77c697cd9e745b36b647e848f5b88f72d7a20fbccd580b5042 WHIRLPOOL c77929a8a76c507df124a6f4b9fc7388a032a65156aa11845c4931777b31289972ccaf7a5dd563f75a99cb9f21039d363c30cfaf2ecc544f33b4fbbd4a4a820c
 DIST xpra-0.5.3.tar.bz2 451985 SHA256 2f0601ed350a787b7e813ad85390de61043c7cfbd072043bdda224592248270b SHA512 73f29fb4d40e465b1242b75368103b85673e6b86bf65fd03d50c1f17a1ec7986f3a0a2a1e7a939594713345889a312511b5d34fa3c940e8706e9e7448e73d1dc WHIRLPOOL 166d6f5b7c50b52183cdaa223eb7a9d37aeb846f01812e7df13a1045b845273d971ca72b330be7415622205b5ca25a45910046b0857d05f3accc72201cff8f2e
+DIST xpra-0.5.6.tar.bz2 453318 SHA256 a456fec93d4fc1e3746432a42d62e177cf27595b17f8cb1c5f6e6d139014f0c9 SHA512 5360a4205b5fcaeac1c47d4794e0faa33fb0c7002d1ecd40db0b848d208516580c1f02fcfc8e3d7c86c24266072d7891b1f416260bce9d7031a641d9776177e3 WHIRLPOOL 6055cd14771cc9e7637a61d314e1a3491b347ccbcd3ffc2ae00ac09c62c6acc53908b06ab1a925ac80a2521d6b63a1de8e584e0ab9672fddc1bfefbba5bb0f50
 DIST xpra-0.6.0.tar.bz2 453087 SHA256 ce3d697dfb860178d3480a95dbf3295e369d06d1f308d67c9b6896fee9a9db1e SHA512 1c30be7377de0d3759478753d013df297e744d3fdb689be1168d84257986da9901720e49e6b354b67e9adc418599e0599f3066cbcaac04e94c136a2e07eb97fd WHIRLPOOL 9378df5db026290c55d8595f4c8c0cace85e27b8ce8525e9c092202269976b9a1c612529a06aba1a2b286fbd0ba4b25dfc9518f155fd8dcd80caf88dd686fd6e
+DIST xpra-0.6.4.tar.bz2 456613 SHA256 3c47e16555325417e8be19dfcfd0c9c9f07d7a6e2e203d0bad46f68ac059f5d6 SHA512 841b7857c58af8943dbe970ce237cb479221acac529397cb32d4ee114551e8437eef3864ea7bed85f5a3b8c53434ace8e86e02cae8a159df59f0e7ba15dd3298 WHIRLPOOL 6abec3fdb6448652b049a88f991785dad764bee821f21e36fd7e24d5be6effc0d4ec31346ea36c499b9a9905ed5c3c2650956ad7fd0d11f02b3ea43ea3fb4f4c
 EBUILD xpra-0.4.2.ebuild 1828 SHA256 c0c09c7a6d1a743483967d4192abb170bbba401c54690a60083a2d093d2a9ac1 SHA512 c27f8a04ee4691965f25550de4a7259d0989b0a1acc0932ae657c14058b950131ccf399ba2d70cf189634c63f3214f41f92b0a672573ace4d54eba2370be1ba0 WHIRLPOOL 2a564e02cade0bf9c927609f8891ee6f4b510f6e56083273d45aa138eb5452ca2e73186373728be6647673ec5197177bb408a08a6c2756391d9a3d9db6326893
-EBUILD xpra-0.5.2.ebuild 1828 SHA256 a801e5707ea86a6fafc9da9d8b3e5fa0dd6344337d00c5bebc41712273d2247b SHA512 da7a7fb09c97d947577f528a055cf01a24dc986176ac912b4581320a3836f60b011da156206b2a74abf4054c1f55d0418b880281a9e2550d9b1182113066a53f WHIRLPOOL b4e7e9c7913392ad327c861e7a92ea72c6fd13f970f27f649f75e74c26012661fa1199b6aa840ae6c92459fcd4a8a57dc1783f97fee145ae148f8ea965195a08
 EBUILD xpra-0.5.3.ebuild 1828 SHA256 a42db24d9d14e59a184029efbad06fd99a26c0042186efd3e6d78c141af09647 SHA512 9c243c223eda7ab7652032f6037d1fd41300d28a97234a7bacd4e11dbe6b0ae2cfa75f53185b799cc60849572d3b149bb31d859d828c6b917d0a2110dde78b02 WHIRLPOOL 7554431e1fcc051993d29c2711cab93c334542747fda7eddc7b040f13213c3397b848b9a771a4d3e13b449d039c7a2de010fb810ccf3065d02ead3ec77c19a5d
+EBUILD xpra-0.5.6.ebuild 1828 SHA256 292708e70121ed60d33cc7a701556cc8faae1c7d12b460cc71fd090580f3ad9a SHA512 b159ba30224ff658e9b49e2e72d8b788f008d5876a525c5795225e9e88fc64d0efb86d4478735588704fb87c980989b443b767a0eaebe24166a3c6b6e55bb898 WHIRLPOOL 796ddbcbbaca1a80f18e781e048db43512d351c6bd4560baf02691ab46ea5e2ddde66eefa6ca6e2e3578f436e5dbd875782cb43438e9b0a39a0b7dece65205b3
 EBUILD xpra-0.6.0.ebuild 1907 SHA256 455054c85f35d7084d59cc169b24f29dc9597f1da648619257d63d232adb1934 SHA512 ef5874929d7f6f059ef616cdd4f932a8ef677c60822e922d7b4fe2d717a310ab960b23b8182345e9778da19388ad818aeacf81f7153bb5fa983ace1ce9c18813 WHIRLPOOL 8842c5f41612a6bd79605b9dc001872b85f3436e5324d2fa8c55753cb15a27c82f5361b0962d8afe86bb7f4317f1b270143de9c02e106aa55015624983d7e5f8
-MISC ChangeLog 3734 SHA256 c56711c0eb41a043837139da750d7c3e3d8da1a4bb1e3fbb444b309c9f4f4f1f SHA512 dc3d490f49458415c4c6916659a2aff2ff22f49c657b70310daf827eb6369e4f4339fee7350527999ef0ea7a2e9f14715e2a0bc0821af93ba977e5985adcb858 WHIRLPOOL 025f380a075586d6c6c38af5d649b6eeb7eade7d885ba939ced573238daa50ca5c97dee74d2f0e5caef4aecb67f7057f288b6b98a039a1786891cc3f590946d8
+EBUILD xpra-0.6.4.ebuild 1907 SHA256 6d77f192503189178dc44998ec8ef4a1e584b0b40ece1ab538049e81d5a604fd SHA512 bb4a6a21bf4eeceedaff8b7535746525eaf5487b51080800d7d9ceb2b0d32da447be4230b12b506eeb197d187e9f3897cb135182fb377715bc5feb9b4679a3e0 WHIRLPOOL 953891af92843d169a54757870cba12c97a04a21205676c9aa574bd05792110d829f4585081ade7f580be6ff75b711033d0482210cd7c59be056496a1168721b
+MISC ChangeLog 3911 SHA256 f02f917b6929ea0aba1a7cf2d7fe016471a7cde1bb8efd7e000c7e34044ce998 SHA512 61a4a6886b88883c13a5e11640e31966c3e5ece3ed2e58d3c5976d1664f0b6da90a38ec77333b3872fd6f17e420a1be92457dea6da19bf4dcfc4bc0f17457c9d WHIRLPOOL 20d9ca855da38dc11d670fd8017b8f30f5e72a1ac728b8b53b77a485ba305121c77b7788a870b045990a9a9efae29c6772e71a91aaafc69f09d9e12920e08e6e
 MISC metadata.xml 542 SHA256 c7813bff556108ea474fcf7b73e8f26c2f872f668873e1d78fd9f8eb6c1602ce SHA512 2d90ecb1d99270d8006b5ae092e27d8934ee03c62fb4970c452b660184533d0e795bf178d0122ed8a1c699956c4f0b9c53a9243772836b58e0fdec5e7c3bd268 WHIRLPOOL 86838144cf7fd9cc099b4601be11da49d82b3b2a7329ab4761017975af4e35601243f9f148cb1486919008d0829bc84dd7b1ade18e5323a968f7bf8103e4378c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBHKQIACgkQknrdDGLu8JDTRgD+Oekn5fpWscE0TGj5u2KxS5WN
-yeNMBzAztrLVm53HePkA/0fhSePvAi092z5a31wWyudNZt8HEe5hIGBal02iAuHr
-=VFcD
+iF4EAREIAAYFAlBv+PYACgkQknrdDGLu8JD+pgD/QxHKf9W3S57vmc2z+10OQNym
+jD6Upaf/xA5BmYviF8UBAI5zQFAh1ZOcOvttXsgGbSRjihjF6/ThGbrtBBejQAsQ
+=dTHo
 -----END PGP SIGNATURE-----
