@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/xpra-0.5.2.ebuild,v 1.1 2012/08/29 21:13:22 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/xpra-0.5.6.ebuild,v 1.1 2012/10/06 09:24:29 xmw Exp $
 
 EAPI=3
 
